[project]
name = "test_cuda"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "numba",
    "numpy",
    "whisperx",
    "torch",
    "torchvision",
    "torchaudio",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu118", marker = "sys_platform == 'win32'" },
    { index = "pytorch-cpu", marker = "sys_platform != 'win32'" },
]
torchvision = [
    { index = "pytorch-cu118", marker = "sys_platform == 'win32'" },
    { index = "pytorch-cpu", marker = "sys_platform != 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
